[gd_scene load_steps=7 format=2]

[ext_resource path="res://nodes/ui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/fonts/button_size.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=3]
action = "start_game"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0.235294, 0.0784314, 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_fonts/font = SubResource( 1 )
text = "Dodge the
Creeps"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.3
anchor_top = 0.75
anchor_right = 0.7
anchor_bottom = 0.85
margin_left = 0.237991
margin_top = 0.320007
margin_right = -0.237915
margin_bottom = 0.239929
custom_fonts/font = ExtResource( 3 )
shortcut = SubResource( 4 )
text = "START"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
